--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_launcher_icons: "^0.7.3"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "assets/img/app-icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -44,6 +50,32 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+  - assets/img/app-icon.png
+  - assets/img/element-cloud.png
+  - assets/img/element-sun.png
+  - assets/img/spalshscreen-iPhoneX.png
+  - assets/img/weather-clear.png
+  - assets/img/weather-cloudy.png
+  - assets/img/weather-rainy.png
+  - assets/img/weather-snow.png
+  - assets/img/weather-thunderstorm.png
+
+  fonts:
+    - family: Poppins
+      fonts:
+      - asset: assets/fonts/Poppins-Black.ttf
+      - asset: assets/fonts/Poppins-ExtraLight.ttf
+      - asset: assets/fonts/Poppins-Light.ttf
+      - asset: assets/fonts/Poppins-Regular.ttf
+
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
