--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_launcher_icons: "^0.7.3"
+  animated_splash: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +55,8 @@ flutter:
   - assets/img/app-icon.png
   - assets/img/element-cloud.png
   - assets/img/element-sun.png
-  - assets/img/spalshscreen-iPhoneX.png
+  - assets/img/splashscreen-iPhoneX.png
+  - assets/img/splash-logo.png
   - assets/img/weather-clear.png
   - assets/img/weather-cloudy.png
   - assets/img/weather-rainy.png
