--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>We need your location so we can tell you the weather</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>We need your location so we can tell you the weather</string>
 </dict>
 </plist>
