--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   animated_splash: ^1.0.0
   http: "^0.11.3+16"
   line_icons: ^0.2.0
+  location: "^1.3.4"
 
 dev_dependencies:
   flutter_test:
