--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   http: "^0.11.3+16"
   line_icons: ^0.2.0
   location: "^1.3.4"
+  simple_slider: "^0.0.1"
 
 dev_dependencies:
   flutter_test:
